[package]
name = "yaml_subscription_conversion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
base64 = "0.21"
actix-web-httpauth = "0.8"
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true        # Strip symbols from binary*
opt-level = "z"  # 最小化二进制文件大小

[target.x86_64-unknown-linux-musl]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "relocation-model=static"
]
